# crotch-bot

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
bot/: WOMApi.py  bot.py  handlers.py
config/: secret.py
tests/: tests.py
tests/.pytest_cache/v/cache/: lastfailed  nodeids
